# bevy-gtk

./: .editorconfig  Cargo.toml  flake.nix  foo.sh  justfile  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
examples/: debug_adw_app.rs  demo.rs  editor_demo.blp  editor_demo.rs  new_demo.rs  two_windows.rs
old/: lib.rs
src/: adwaita_app.rs  hal_custom.rs  lib.rs  render.rs  vk_instance.rs  window.rs
src/old/: adwaita_app.rs
src/render/: dmabuf.rs  mod.rs  viewport.rs
src/viewport/: dmabuf.rs  mod.rs
src/window/: event.rs  mod.rs
