[package]
name = "bevy_mod_adwaita"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = { git = "https://github.com/bevyengine/bevy", rev = "e7b83acadcdca3f5d4864944f43f21d4784f35fe", default-features = false, features = [
bevy = { version = "0.14.2", default-features = false, features = [
  "bevy_asset",
  "bevy_render",
  "bevy_winit",
  "wayland",
] }

ash = "0.37.3"
wgpu = "0.20.1"
wgpu-hal = { version = "0.21.1", features = ["vulkan"] }
futures-lite = "2.3.0"
tracing = "0.1.40"
oneshot = "0.1.8"
flume = "0.11.0"
atomicbox = "0.4.0"
thiserror = "1.0.64"
log = "0.4.22"
sync_wrapper = "1.0.1"
rand = "0.8.5"

[dependencies.adw]
package = "libadwaita"
version = "0.7.0"
features = ["v1_2", "gtk_v4_2"]

[dependencies.gtk]
package = "gtk4"
version = "0.9.2"
features = ["v4_16"]

[dev-dependencies]
bevy = "0.14.2"
