[package]
name = "bevy_gtk"
version = "0.1.0"
# description = ""

authors      = ["aecsocket <aecsocket@tutanota.com>"]
# categories   = ["game-development", "network-programming"]
edition      = "2024"
# keywords     = ["gamedev", "bevy"]
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/aecsocket/bevy-gtk"
rust-version = "1.86.0"

[features]
adwaita = ["dep:libadwaita"]

[dependencies]
bevy_ecs = { version = "0.16", default-features = false }
bevy_app = { version = "0.16", default-features = false }
bevy_window = { version = "0.16", default-features = false }
bevy_platform = { version = "0.16", default-features = false, features = ["alloc"] }
bevy_derive = { version = "0.16", default-features = false }

log = { version = "0.4" }
gtk4 = { version = "0.10", features = ["v4_16"] }
gdk4 = { version = "0.10" }
gio = { version = "0.21" }
glib = { version = "0.21" }
async-channel = { version = "2.5" }

libadwaita = { optional = true, version = "0.8", features = ["v1_6"] }

[dev-dependencies]
bevy = { version = "0.16", features = ["wayland"] }
clap = { version = "4.5", features = ["derive"] }
bevy_gtk = { path = ".", features = ["adwaita"] }
